hphp/hack/test/typecheck/array_subscript_curly.php.exp
File "array_subscript_curly.php", line 4, characters 12-12:
Do not use { to subscript, use [ (Parsing[1002])
