hphp/hack/test/typecheck/array_subscript_curly.php
<?hh

function f($x) {
  return $x{1};
}
